--- a/h1we080125-typescript-everride/package.json
+++ b/h1we080125-typescript-everride/package.json
@@ -4,27 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "dev": "tsx watch src/index.ts", 
-  "build": "tsc",  
-  "start": "node dist/index.js", 
-  "prisma:generate": "prisma generate", 
-  "prisma:migrate": "prisma migrate dev" 
-},
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:reset": "prisma migrate reset",
+    "prisma:seed": "prisma db seed"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
     "@prisma/client": "6.19",
+    "@types/bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "dependencies": {
-      "@types/express": "^5.0.5",
-      "@types/node": "^24.10.1",
-      "prisma": "6.19",
-      "tsx": "^4.20.6",
-      "typescript": "^5.9.3"
-   
+    "@types/express": "^5.0.5",
+    "@types/node": "^24.10.1",
+    "bcrypt": "^6.0.0",
+    "prisma": "6.19",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
