--- a/h1we080125-typescript-everride/package.json
+++ b/h1we080125-typescript-everride/package.json
@@ -12,6 +12,9 @@
     "prisma:reset": "prisma migrate reset",
     "prisma:seed": "prisma db seed"
   },
+  "prisma": {
+    "seed": "tsx prisma/seedCSV.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,6 +22,8 @@
   "devDependencies": {
     "@prisma/client": "6.19",
     "@types/bcrypt": "^6.0.0",
+    "@types/csv-parse": "^1.1.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
@@ -26,6 +31,8 @@
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "bcrypt": "^6.0.0",
+    "csv-parse": "^6.1.0",
+    "jsonwebtoken": "^9.0.3",
     "prisma": "6.19",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
